# ChangeLog for app-text/vilistextum
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/vilistextum/ChangeLog,v 1.32 2011/02/06 14:14:51 grobian Exp $

  06 Feb 2011; Fabian Groffen <grobian@gentoo.org> vilistextum-2.6.9.ebuild:
  Marked ~x86-solaris

  15 Jan 2011; Markus Meier <maekke@gentoo.org> vilistextum-2.6.9.ebuild:
  x86 stable, bug #350833

  08 Jan 2011; Markos Chandras <hwoarang@gentoo.org> vilistextum-2.6.9.ebuild:
  Stable on amd64 wrt bug #350833

  07 Jan 2011; Brent Baude <ranger@gentoo.org> vilistextum-2.6.9.ebuild:
  Marking vilistextum-2.6.9 ppc for bug 350833

  07 Jan 2011; Justin Lecher <jlec@gentoo.org> vilistextum-2.6.9.ebuild:
  Make sure correct locale is present during test, 350833

  06 Jan 2011; Justin Lecher <jlec@gentoo.org> vilistextum-2.6.7.ebuild,
  vilistextum-2.6.7-r1.ebuild, vilistextum-2.6.9.ebuild:
  Some Clean up

  18 Mar 2010; Fabian Groffen <grobian@gentoo.org> vilistextum-2.6.9.ebuild,
  +files/vilistextum-2.6.9-prefix.patch:
  Add Prefix patch, transferred Prefix keywords, override locale
  autodetection with en_US.UTF-8 to avoid using a random (possibly
  non-working) other UTF-8 locale.

*vilistextum-2.6.7-r1 (06 Mar 2010)

  06 Mar 2010; Justin Lecher (jlec) <jlec@gentoo.org>
  +vilistextum-2.6.7-r1.ebuild, vilistextum-2.6.9.ebuild:
  do not try to install *.css which are not available, #305543, thanks
  Christophe LEFEBVRE for the patches

*vilistextum-2.6.9 (13 Feb 2008)

  13 Feb 2008; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  +files/vilistextum-2.6.9-gentoo.diff, +vilistextum-2.6.9.ebuild:
  Version bump, #155734

  11 Jan 2008; Fabian Groffen <grobian@gentoo.org> vilistextum-2.6.7.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  04 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  vilistextum-2.6.7.ebuild:
  Fix autotools handling, patch by Jakub Moc in bug #152215.
