@@ -6,6 +6,6 @@ DIST vilistextum-2.6.7.tar.bz2 144815 RMD160 b12efbf5b2cfc7313ac0406cb4c471f93a7
 DIST vilistextum-2.6.9.tar.bz2 147743 RMD160 3e041a1c368f3f7e4c370474e18829ed49fba206 SHA1 24d8978c5ebd76c9eacb2ba2381eb119e4d0f7bf SHA256 dddf05b4b9dbb408ea37b5654666f8cf57b5c1da0dd722de763bc86788723d0f
 EBUILD vilistextum-2.6.7-r1.ebuild 988 RMD160 4e4a62d55a85b518d046ce4a820c1bb03aa6bf9e SHA1 0cb46a666d6ffae1485df2d0b2da4da16c8336d2 SHA256 d87a4df750c4d8872c57e2e46c6bc2f473a6915b0f2a3bfcf3f4f2c9ad6ad599
 EBUILD vilistextum-2.6.7.ebuild 1054 RMD160 db5fa8e0c49fd8c5aff539c7edf8dca612e85434 SHA1 ec182175cb953ee10e5e646efce3ce1dec737a8a SHA256 15e79323f9da3ba106fcce6224670aad7287005f68284299a92ad34636208d8a
-EBUILD vilistextum-2.6.9.ebuild 1475 RMD160 cc43f560b1d85f8bcd2cbfc495c7f39d15b4faea SHA1 4c1ac22b6708737785b36d0ab63dd6c62503cba5 SHA256 645dae738da4ebc4121ddb80d68535e2e3572d8a4d6ad7825bbb7d427c737f79
-MISC ChangeLog 4242 RMD160 5e5041b3b0f6f449547f363cd5dfe165b9df90d1 SHA1 9cb9796167fa6dbd1cbf7b050da0b947ec06b775 SHA256 af2821e6676800ee9552b5efe08836d3d9dda208d01ffe488e0c8894ca91f1be
+EBUILD vilistextum-2.6.9.ebuild 1951 RMD160 c17a520cce93363ca2d50ad09613e27cbe61ed33 SHA1 43c827452362647a6296b9930c6c034616c79afc SHA256 249484537d1d78cd9dc6d01f08b5946b65d9b42c2dd7a7f01d850cc89b087680
+MISC ChangeLog 4497 RMD160 ac18200586d1b808f950871642a8052c3d57e14a SHA1 221fb34d4d4ce02667ecab2465638748aa3ecf35 SHA256 cc844476a52a6cb5220e4bb374b19ecc6db7030d63aeeb4ca6d3b08f67f3d2d1
 MISC metadata.xml 165 RMD160 c4557a3518a065b077539be5a0f20e4735fc2141 SHA1 1831705b1eb97b63968fc9eef31aa904a69a854a SHA256 75ca85c472d4181ae0de529c83826baaebe75d9e750ee6621758b5096bceffcd
